--- a/open_web_calendar/translations/en/index.yml
+++ b/open_web_calendar/translations/en/index.yml
@@ -4,7 +4,7 @@
 # https://open-web-calendar.hosted.quelltext.eu/#translate-about
 about: 'The Open Web Calendar uses ICS/ICal calendars online and displays them in
   one calendar. You can use it with Nextcloud, Outlook, Google Calendar, Meetup and
-  other calendar systems using the ICS standard.'
+  other calendar systems using the ICS standard. Update!'
 
 
 # Input for URLs of ICS files.
